correction of pagination, dynamic home page

--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -103,28 +103,33 @@
                             </li>
                         {% else %}
                             <!--disabled link/button so can't go back-->
-                            <li class="page-item disabled"></li>
-                            <a class="page-link">&laquo;</a>
+                            <li class="page-item disabled">
+                                <a class="page-link">&laquo;</a>
+                            </li>
                         {% endif %}
                         <!--loop thhrough the pages-->
-                        {% for i in listings.paginator.page_range" %}
+                        {% for i in listings.paginator.page_range %}
                             {% if listings.number == i %}
-                                <!--active page-->>
-                                <li class="page-item active">{{i}}</li>
+                                <!--active page-->
+                                <li class="page-item active">
+                                    <a class="page-link">{{i}}</a>
+                                </li>
                             {% else %}
                                 <li class="page-item">
                                     <a href="?page={{i}}" class="page-link">{{i}}</a>
+                                </li>
                             {% endif %}
                         {% endfor %}
                         {% if listings.has_next %} <!--link to go  to the next--> 
                         <li class="page-item">
-                            <a href="?page={{listings.next_page_number}}" class="page-link">raquo;
+                            <a href="?page={{listings.next_page_number}}" class="page-link">&raquo;
                             </a>
                         </li>
                         {% else %}
                             <!--disabled link/button so can't go back-->
-                            <li class="page-item disabled"></li>
-                            <a class="page-link">&raquo;</a>
+                            <li class="page-item disabled">
+                                <a class="page-link">&raquo;</a>
+                            </li>
                         {% endif %}
                     </ul>
                 {% endif %}
