--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -10,7 +10,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav"> <!-- highlithing the button when on it -->
         <li 
             {% if '/' == request.path %}
                 class="nav-item active mr-3"
@@ -41,12 +41,24 @@
         </ul>
 
         <ul class="navbar-nav ml-auto">
-        <li class="nav-item mr-3">
-            <a class="nav-link" href="register.html">
+        <li 
+        {% if 'register' in request.path %}
+                class="nav-item active mr-3"
+            {% else %}
+                class="nav-item mr-3"
+            {% endif %}
+        >
+            <a class="nav-link" href="{% url 'register' %}"> <!--link to the page-->
             <i class="fas fa-user-plus"></i> Register</a>
         </li>
-        <li class="nav-item mr-3">
-            <a class="nav-link" href="login.html">
+        <li 
+        {% if 'login' in request.path %}
+                class="nav-item active mr-3"
+            {% else %}
+                class="nav-item mr-3"
+            {% endif %}
+        >
+            <a class="nav-link" href="{% url 'login' %}">
             <i class="fas fa-sign-in-alt"></i>
 
             Login</a>
