add registering anf login functionnality

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -2,6 +2,8 @@
 
 {% load static%}
 
+{% block title %} | About Us {% endblock %}
+
 {% block content %}
 
     <section id="showcase-inner" class="py-5 text-white">
@@ -45,7 +47,7 @@
                 <!--add mvp(s)-->
                 <!--if mvp is ticked in admin page it will show here-->
                 {% if mvp_realtors %}
-                    {% realtor in mvp_realtors %}
+                    {% for realtor in mvp_realtors %}
                         <div class="card">
                             <img class="card-img-top" src="{{ realtor.photo.url }}" alt="Seller of the month">
                             <div class="card-body">
