--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% block title %} | register account {% endblock %}
 
 {% block content %}
 <section id="register" class="bg-light py-5">
