--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -35,6 +35,9 @@
     </div>
   </section>
 
+  <!-- Alerts -->
+  {% include 'partials/_alerts.html' %}
+
   <!-- Listing -->
   <section id="listing" class="py-4">
     <div class="container">
@@ -131,8 +134,6 @@
                   <span class="float-right">{{ listing.realtor }}
                   </span>
                 </li>
-
-
               </ul>
             </div>
           </div>
@@ -180,7 +181,7 @@
             <input type="hidden" name="listing_id" value="{{ listing.id }}">
             <div class="form-group">
               <label for="property_name" class="col-form-label">Property:</label>
-              <input type="text" name="listing" class="form-control" value="{{ listing.title }}" disabled>
+              <input type="text" name="listing" class="form-control" value="{{ listing.title }}">
             </div>
             <div class="form-group">
               <label for="name" class="col-form-label">Name:</label>
